namespaces/live.cloud-platform.service.justice.gov.uk/stg-manage-community-sentence-ui-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "stg-manage-community-sentence-ui-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "tech-for-com"
    cloud-platform.justice.gov.uk/application: "Manage My Community Sentence"
    cloud-platform.justice.gov.uk/owner: "Service Transformation Team: techforcom@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/stg-tcom-manage-unpaid-work-webapp"
    cloud-platform.justice.gov.uk/team-name: "stg-pathfinders"
    cloud-platform.justice.gov.uk/review-after: ""
